# prompt-sensitivity-bench

./: .gitignore  CNAME  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: contribution.yml
.github/workflows/: build.yml
data/: LICENSE  README.md
data/examples/: e9_specificity_fixture.json
data/public/: findings.json  models.json
data/schemas/: contribution.schema.json  contributor.schema.json  experiment.schema.json  finding.schema.json  model.schema.json
docs/: about.md  contribute.md  data.md  index.md  methodology.md
docs/findings/: complexity.md  context-budget.md  demorgan.md  filler.md  format.md  k1-trap.md  specificity.md
docs/overrides/: main.html
docs/stylesheets/: extra.css
harness/: README.md  data.py  pyproject.toml  validate.py
scripts/: aggregate.py  check_public_repo.py  failure_taxonomy.py  generate_social_cards.py  plot.py  schema_utils.py  validate_contribution.py  validate_public_data.py
