[project]
name = "prompt-sensitivity-bench"
version = "0.1.0"
description = "An open dataset of prompt sensitivity across local and frontier LLMs"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "mkdocs-material>=9.5",
]

[tool.setuptools]
py-modules = []

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
